--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS DEMO</title>
+
+    <link rel="stylesheet" href="./resources/style.css"/>
 </head>
 
 <body>
     <header>
         <section class="top-element">
-            <img src="./R-logo.png" alt="Company Logo">
+            <img id="icon" src="./R-logo.png" alt="Company Logo">
             <div class="company-header">
                 <h1>Company Name</h1>
-                <p>Description</p>
+                <p class="company-desc">Description</p>
             </div>
             <div class="user-interface">
                 <div class="languages">
