--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS DEMO</title>
 
-    <link rel="stylesheet" href="./resources/style.css"/>
+    <link rel="stylesheet" href="./resources/style.css" />
+
+    <!-- JACQUARD24 FONT -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jacquard+24&display=swap" rel="stylesheet">
 </head>
 
 <body>
