Added flex box and psuedo.

--- a/index.html
+++ b/index.html
@@ -6,12 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS DEMO</title>
 
+    <!-- CUSTOM CSS -->
     <link rel="stylesheet" href="./resources/style.css" />
 
     <!-- JACQUARD24 FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jacquard+24&display=swap" rel="stylesheet">
+
+    <style>
+        h1 {
+            font-family: monospace;
+        }
+    </style>
 </head>
 
 <body>
@@ -19,7 +26,7 @@
         <section class="top-element">
             <img id="icon" src="./R-logo.png" alt="Company Logo">
             <div class="company-header">
-                <h1>Company Name</h1>
+                <h1 style="font-family: 'Jacquard 24', system-ui;">Company Name</h1>
                 <p class="company-desc">Description</p>
             </div>
             <div class="user-interface">
@@ -37,7 +44,7 @@
             </div>
         </section>
         <section class="bottom-element">
-            <nav>
+            <nav class="nav-links">
                 <a href="" class="nav-link">Home</a>
                 <a href="" class="nav-link">Products</a>
                 <a href="" class="nav-link">Download</a>
@@ -46,7 +53,7 @@
                 <a href="" class="nav-link">About</a>
             </nav>
             <div class="search">
-                <input type="text">
+                <input type="text" placeholder="Search">
                 <input type="button" value="magnify">
             </div>
         </section>
