Added page and CSS variables

--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jacquard+24&display=swap" rel="stylesheet">
 
-    <style>
-        h1 {
-            font-family: monospace;
-        }
-    </style>
+    <!-- JERSEY 15 FONT-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jersey+15&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
     <header>
         <section class="top-element">
-            <img id="icon" src="./R-logo.png" alt="Company Logo">
             <div class="company-header">
-                <h1 style="font-family: 'Jacquard 24', system-ui;">Company Name</h1>
+                <img id="icon" src="./R-logo.png" alt="Company Logo">
+                <h1>Company Name</h1>
                 <p class="company-desc">Description</p>
             </div>
             <div class="user-interface">
@@ -45,18 +45,19 @@
         </section>
         <section class="bottom-element">
             <nav class="nav-links">
-                <a href="" class="nav-link">Home</a>
+                <a href="./index.html" class="nav-link">Home <strong>You are here</strong></a>
                 <a href="" class="nav-link">Products</a>
                 <a href="" class="nav-link">Download</a>
                 <a href="" class="nav-link">Buy Now</a>
                 <a href="" class="nav-link">Support</a>
-                <a href="" class="nav-link">About</a>
+                <a href="./about.html" class="nav-link">About</a>
             </nav>
             <div class="search">
                 <input type="text" placeholder="Search">
                 <input type="button" value="magnify">
             </div>
         </section>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo atque distinctio impedit, cumque earum est dolor fugit voluptate quas doloribus magnam consectetur accusantium hic beatae placeat eius. Esse, adipisci harum.</p>
     </header>
 </body>
 
